--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 * {
   box-sizing: border-box;
@@ -14,4 +11,10 @@ body {
   overflow-x: hidden;
   width: 100%;
   max-width: 100vw;
+  font-family: "Rye", cursive, sans-serif;
+}
+
+::selection {
+  background-color: #10b981;
+  color: #ffffff;
 }
